# serialstorm

./: .gitignore  CMakeLists.txt  README.md  cast_if_required.h
.github/workflows/: tests.yml
build-cov/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cov/Testing/Temporary/: CTestCostData.txt
build-cov/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_serialstorm-b12d07c_include.cmake  test_serialstorm-b12d07c_tests.cmake
serialstorm/: serialstorm.h  serialstorm_forward.h  stream_asio_async.h  stream_asio_sync.h  stream_base.h  stream_std_fstream.h  stream_std_stream.h
tests/: CMakeLists.txt  test_serialstorm.cpp
